--- a/index.html
+++ b/index.html
@@ -22,8 +22,20 @@
       	<![endif]-->
 </head>
 
-<body>
+<body class="off">
     <!-- YOUR CONTENT GOES HERE -->
+    <div class="container">
+        <div class="lights-on">
+        <h1>Lights On!</h1>
+        <img src="img/light-on.png"/>
+        <p>The Lights are On!</p>
+        </div>
+        <div class="lights-off">
+            <h1>Lights Off!</h1>
+            <img src="img/light-off.png"/>
+            <p>The Lights are Off!</p>
+            </div>
+    </div>
 
 
     <!-- Your javascript should be called here -->
